fixing spacing

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -141,6 +141,7 @@ check, radio {
 .center {
     display: inline-block;
     width: auto;
+    margin:auto;
 }
 
 .block {
